--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "any-language-word-guessing-game",
     "version": "0.1.0",
+    "homepage": "https://skanderson15.github.io/Nisenan-Word-Guessing",
     "private": true,
     "dependencies": {
         "@bcgov/bc-sans": "^1.0.1",
